# hcrc

./: crc.cabal
Data/Digest/: CRC.hs
Test/: CRC.hs
